// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Login /> component should match snapshot when loading 1`] = `
<DocumentFragment>
  <div
    class="container flex items-center fr"
  >
    <div
      class="relative"
    >
      <button
        class="ButtonWithIcon-mock"
        type="button"
      >
        <div
          class="flex pv2 items-center"
        />
      </button>
      <div>
        <div
          class="box absolute z-max dn"
        >
          <div
            class="arrowUp absolute top-0 right-0 shadow-3 bg-base mr3 rotate-45 h2 w2"
          />
          <div
            class="contentContainer shadow-3 mt3"
          >
            <div
              class="content flex relative bg-base justify-around overflow-visible pa4 center contentInitialScreen items-baseline"
            >
              <div
                enter="[object Object]"
                from="[object Object]"
                keys=""
                leave="[object Object]"
              />
              <div
                class="contentForm dn ph4 pb6"
              >
                <div
                  enter="[object Object]"
                  from="[object Object]"
                  keys=""
                  leave="[object Object]"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Login /> component should match snapshot with profile with name 1`] = `
<DocumentFragment>
  <div
    class="container flex items-center fr"
  >
    <div
      class="relative"
    >
      <button
        class="ButtonWithIcon-mock"
        type="button"
      >
        <div
          class="flex pv2 items-center"
        >
          <span
            class="profile t-action--small order-1 pl4 white dn db-l"
          >
            Hello, firstName
          </span>
        </div>
      </button>
      <div>
        <div
          class="box absolute z-max dn"
        >
          <div
            class="arrowUp absolute top-0 right-0 shadow-3 bg-base mr3 rotate-45 h2 w2"
          />
          <div
            class="contentContainer shadow-3 mt3"
          >
            <div
              class="content flex relative bg-base justify-around overflow-visible pa4 center items-baseline"
            >
              <div
                enter="[object Object]"
                from="[object Object]"
                keys=""
                leave="[object Object]"
              />
              <div
                class="contentForm dn ph4 pb6 contentFormVisible db "
              >
                <div
                  enter="[object Object]"
                  from="[object Object]"
                  keys="children"
                  leave="[object Object]"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Login /> component should match snapshot with profile without name 1`] = `
<DocumentFragment>
  <div
    class="container flex items-center fr"
  >
    <div
      class="relative"
    >
      <button
        class="ButtonWithIcon-mock"
        type="button"
      >
        <div
          class="flex pv2 items-center"
        >
          <span
            class="profile t-action--small order-1 pl4 white dn db-l"
          >
            Hello, email@v...
          </span>
        </div>
      </button>
      <div>
        <div
          class="box absolute z-max dn"
        >
          <div
            class="arrowUp absolute top-0 right-0 shadow-3 bg-base mr3 rotate-45 h2 w2"
          />
          <div
            class="contentContainer shadow-3 mt3"
          >
            <div
              class="content flex relative bg-base justify-around overflow-visible pa4 center items-baseline"
            >
              <div
                enter="[object Object]"
                from="[object Object]"
                keys=""
                leave="[object Object]"
              />
              <div
                class="contentForm dn ph4 pb6 contentFormVisible db "
              >
                <div
                  enter="[object Object]"
                  from="[object Object]"
                  keys="children"
                  leave="[object Object]"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Login /> component should match snapshot without profile 1`] = `
<DocumentFragment>
  <div
    class="container flex items-center fr"
  >
    <div
      class="relative"
    >
      <button
        class="ButtonWithIcon-mock"
        type="button"
      >
        <div
          class="flex pv2 items-center"
        />
      </button>
      <div>
        <div
          class="box absolute z-max dn"
        >
          <div
            class="arrowUp absolute top-0 right-0 shadow-3 bg-base mr3 rotate-45 h2 w2"
          />
          <div
            class="contentContainer shadow-3 mt3"
          >
            <div
              class="content flex relative bg-base justify-around overflow-visible pa4 center contentInitialScreen items-baseline"
            >
              <div
                enter="[object Object]"
                from="[object Object]"
                keys="children"
                leave="[object Object]"
              />
              <div
                class="contentForm dn ph4 pb6"
              >
                <div
                  enter="[object Object]"
                  from="[object Object]"
                  keys=""
                  leave="[object Object]"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
